button spacing fixed

--- a/src/css sheets/essay-page.css
+++ b/src/css sheets/essay-page.css
@@ -33,7 +33,7 @@
 }
 
 .button-div > * {
-    flex: 0 0 calc(25% - 8px); 
+    flex: 0 0 0 calc(25% - 8px); 
     box-sizing: border-box;
     margin: 3px; 
 }
